--- a/_posts/2009-01-28-pyqt-playground-image-gallery-with-zoom.html
+++ b/_posts/2009-01-28-pyqt-playground-image-gallery-with-zoom.html
@@ -7,13 +7,14 @@ tags:
 - python
 - qt
 ---
-In this article I'm going to create a small <a title="PyQT" href="http://www.riverbankcomputing.co.uk/software/pyqt/intro">PyQT</a> based application that displays images in a grid and that zoom the image hovered by the mouse.
+<p>In this article I'm going to create a small <a title="PyQT" href="http://www.riverbankcomputing.co.uk/software/pyqt/intro">PyQT</a> based application that displays images in a grid and that zoom the image hovered by the mouse.</p>
 
-This is how the final application looks like:
-<p style="text-align: center;"><img class="aligncenter" title="PyQT Image Gallery Screenshot" src="/code/pyqt_image_gallery/ig_screenshot.png" alt="PyQT Image Gallery Screenshot" width="354" height="368" /></p>
+<p>This is how the final application looks like:
+<img class="align-center thumbnail" title="PyQT Image Gallery Screenshot" src="/code/pyqt_image_gallery/ig_screenshot.png" alt="PyQT Image Gallery Screenshot" width="354" height="368" /></p>
 
-The first class we need is an <em>ImageGallery</em>, which is a mere <em>QDialog</em> using a <em>QGridLayout</em>.
-{% highlight python %}class ImageGallery(QDialog):
+<p>The first class we need is an <code class="simple">ImageGallery</code>, which is a mere <code class="simple">QDialog</code> using a <code class="simple">QGridLayout</code>.</p>
+{% highlight python %}
+class ImageGallery(QDialog):
 
     def __init__(self, parent=None):
         super(QDialog, self).__init__(parent)
@@ -32,22 +33,28 @@ The first class we need is an <em>ImageGallery</em>, which is a mere <em>QDialog
             col +=1
             if col % imagesPerRow == 0:
                 row += 1
-                col = 0{% endhighlight %}
-The code is very simple, the class has only one public method, <em>populate</em>, which iterates over the images passed in the argument pics, create a <em>QPixmap </em>for each of them, and add them to the layout.
+                col = 0
+{% endhighlight %}
+<p>The code is very simple, the class has only one public method, <code class="simple">populate</code>, which iterates over the images passed in the argument pics, create a <code class="simple">QPixmap </code>for each of them, and add them to the layout.</p>
 
-The interesting bit is the line where I create the label:
-{% highlight python %}label = ImageLabel(""){% endhighlight %}
-This line creates a new instance of the <em>ImageLabel</em>, which is listed here below:
-{% highlight python %}class ImageLabel(QLabel):
+<p>The interesting bit is the line where I create the label:</p>
+{% highlight python %}
+label = ImageLabel("")
+{% endhighlight %}
+<p>This line creates a new instance of the <code class="simple">ImageLabel</code>, which is listed here below:</p>
+{% highlight python %}
+class ImageLabel(QLabel):
     """ This widget displays an ImagePopup when the mouse enters its region """
     def enterEvent(self, event):
         self.p = ImagePopup(self)
         self.p.show()
-        event.accept(){% endhighlight %}
-The <em>ImageLabel</em> is a normal <em>QLabel</em> except that I redefined the <em>enterEvent</em> in order to show an <em>ImagePopup</em> when the mouse enters the label.
+        event.accept()
+{% endhighlight %}
+<p>The <code class="simple">ImageLabel</code> is a normal <code class="simple">QLabel</code> except that I redefined the <code class="simple">enterEvent</code> in order to show an <code class="simple">ImagePopup</code> when the mouse enters the label.</p>
 
-Finally, the <em>ImagePopup</em> class, responsible for the creation of the zoomed popup image.
-{% highlight python %}class ImagePopup(QLabel):
+<p>Finally, the <code class="simple">ImagePopup</code> class, responsible for the creation of the zoomed popup image.</p>
+{% highlight python %}
+class ImagePopup(QLabel):
     """
     The ImagePopup class is a QLabel that displays a popup, zoomed image
     on top of another label.
@@ -76,7 +83,8 @@ Finally, the <em>ImagePopup</em> class, responsible for the creation of the zoom
 
     def leaveEvent(self, event):
         """ When the mouse leave this widget, destroy it. """
-        self.destroy(){% endhighlight %}
-That's it, it's very simple as you can see. You can download the <a title="Python code for PyQT Image Gallery" href="/code/pyqt_image_gallery/pyqt_image_gallery.py">python code</a> or a <a title="PyQT Image Gallery code and images" href="/code/pyqt_image_gallery/pyqt_image_gallery.zip">zip file</a> containing the code and the images.
+        self.destroy()
+{% endhighlight %}
+<p>That's it, it's very simple as you can see. You can download the <a title="Python code for PyQT Image Gallery" href="/code/pyqt_image_gallery/pyqt_image_gallery.py">python code</a> or a <a title="PyQT Image Gallery code and images" href="/code/pyqt_image_gallery/pyqt_image_gallery.zip">zip file</a> containing the code and the images.</p>
 
-Thanks for reading.
+<p>Thanks for reading.</p>
