--- a/_posts/2011-04-30-playing-an-audio-file-with-android.html
+++ b/_posts/2011-04-30-playing-an-audio-file-with-android.html
@@ -138,7 +138,8 @@ public class PlayAudioActivity extends Activity implements MediaPlayerControl {
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/audioView"
-    />
+    android:id="@+id/audioView">
 </LinearLayout>
 {% endhighlight %}
+
+<p></p>
