Minor changes to about page

--- a/about.html
+++ b/about.html
@@ -4,10 +4,22 @@ title: About
 ---
 
 <div>
-    <p>My name is Marco Dinacci and I am a software developer currently living in Cambridge, UK.</p>
+    <p>My name is Marco Dinacci and I am a software developer currently living in </p>
+    	<ul>
+    		<li><span style="text-decoration: line-through;">Arcore (Italy)</span></li>
+    		<li><span style="text-decoration: line-through;">Milan (Italy)</span></li>
+    		<li><span style="text-decoration: line-through;">Toulouse (France)</span></li>
+    		<li><span style="text-decoration: line-through;">Marseille (France)</span></li>
+    		<li><span style="text-decoration: line-through;">La Paz (Bolivia)</span></li>
+    		<li><span style="text-decoration: line-through;">Tarapoto (Peru)</span></li>
+    		<li><span style="text-decoration: line-through;">Quito (Ecuador)</span></li>
+    		<li><span style="text-decoration: line-through;">Cali (Colombia)</span></li>
+    		<li><strong>Cambridge, UK</strong></li>
+    	</ul>
     <p>This website is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.</p>
 
-    <p>This blog is written (mostly, still migrating old stuff) in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a> 
+    <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a> 
     and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>.</p>
+    <p>I'm still migrating content from a previous blog so some of the content, including the blog comments, is still missing.</p>
 
 </div>
