Added new post, finished comments integration, minor layout and style changes

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
     	</ul>
     <p>This website is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.</p>
 
-    <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a> 
+    <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a>, a sprinkle of <a href="http://twitter.github.com/bootstrap/" title=""Twitter Bootstrap>Bootstrap</a> 
     and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>.</p>
     <p>I'm still migrating content from a previous blog so some of the content, including the blog comments, is still missing.</p>
 
