Minor changes to biography and posts

--- a/_posts/2011-07-14-movie-suggestions-beta-is-out.html
+++ b/_posts/2011-07-14-movie-suggestions-beta-is-out.html
@@ -1,10 +1,11 @@
 --- 
 layout: post
 title: Movie Suggestions Beta
-published: true
 tags: 
 - android
 ---
+<p class="headsup">UPDATE: <a href="https://github.com/mdinacci/rottentomatoes-for-android" title="source code">here</a> is the source code of the RottenTomatoes API wrapper. It's not a full wrapper but it covers most of the API.</p>
+
 <p>I just released my first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">on the Android market</a>. Technically it's the second but it's the first one on the market.</p>
 
 <p><strong>Movie Suggestions</strong> is a simple application that uses a couple of web services to find a list of movies that you may like.  
@@ -16,6 +17,5 @@ Once you select a movie you can then read some comments from reviewers and see t
 
 <p>I used the <a href="http://developer.rottentomatoes.com/">Rottentomatoes API</a> to search and retrieve movie informations and another web service to look for the trailer on Youtube. This last one actually saved me a lot of work.</p>
 
-<p>The application is free and will always be but I'm not yet releasing the source code as it uses some libraries I've written that I don't want to release. I will definitely release the wrapper around the Rottentomatoes API as soon as I'll find the time.</p>
+<p style="margin-bottom:60px">The application is free and will always be but I'm not yet releasing the source code as it uses some libraries I've written that I don't want to release. I will definitely release the wrapper around the Rottentomatoes API as soon as I'll find the time.</p>
 
-<p>UPDATE: <a href="https://github.com/mdinacci/rottentomatoes-for-android" title="source code">here</a> is the source code of the RottenTomatoes API wrapper. It's not a full wrapper but it covers most of the API.</p>
