--- a/_posts/2011-11-10-look-it-job-market.html
+++ b/_posts/2011-11-10-look-it-job-market.html
@@ -30,6 +30,8 @@ load();
 .term-cloud-link:hover {text-decoration: underline;}
 </style>
 
+<div class="headsup"><strong>Update!</strong> the ruby source code is <a href="https://github.com/mdinacci/careers-crawler" title="crawler on github">on github</a>.</div>
+
 <h3>Introduction</h3>
 
 <p>Few weeks ago I bought an <a href="http://pragprog.com/book/btlang/seven-languages-in-seven-weeks" title="Seven Languages In Seven Weeks">amazing book</a> whose first chapter is an introduction to the Ruby language. I've never really been interested in Ruby before as I'm perfectly happy with Python but I think there's always something to learn when studying a new language. 
