--- a/_posts/2012-03-01-group-bill-hit-the-app-store.html
+++ b/_posts/2012-03-01-group-bill-hit-the-app-store.html
@@ -21,8 +21,8 @@ tags:
 <iframe class="thumbnail" width="560" height="315" src="http://www.youtube.com/embed/oZ3GGWrDwMM" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<p>I'll update it to French and Spanish, and then I'll be ready to start a bigger project.
-If you want to contribute a translation in your language please let me know (use the share link on the bottom or the <a href="/blog/support/">page</a>) I will include you in the credits. </p>
+<p>I'll update it to French and Spanish and then I'll be ready to start a bigger project.
+If you want to contribute a translation in your language please let me know (use the share link on the bottom or the <a href="/support.html">support page</a>) I will include you in the credits. </p>
 
 Marco
 
