--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@ title: About
 ---
 
 <div>
-    <p>My name is Marco Dinacci and I am a software developer currently living in </p>
+    <p>My name is Marco Dinacci and I am a software developer currently living in <img src="http://www.gravatar.com/avatar/aa8bf7addb3e6f190456aa113629ab58?s=150" title="Gravatar" class="align-right thumbnail"/></p>
     	<ul>
+            <li><span style="text-decoration: line-through;">Monza (Italy)</span></li>
     		<li><span style="text-decoration: line-through;">Arcore (Italy)</span></li>
     		<li><span style="text-decoration: line-through;">Milan (Italy)</span></li>
     		<li><span style="text-decoration: line-through;">Toulouse (France)</span></li>
@@ -19,7 +20,11 @@ title: About
     <p>This website is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.</p>
 
     <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a>, a sprinkle of <a href="http://twitter.github.com/bootstrap/" title=""Twitter Bootstrap>Bootstrap</a> 
-    and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>.</p>
+    and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>. If that makes sense to you, why don't you <a href="https://github.com/mdinacci/intransitione.com">checkout the source code ?</a></p>
     <p>I'm still migrating content from a previous blog so some of the content, including the blog comments, is still missing.</p>
+
+    <p>If you're interested in my CV/Resume, you can see it on <a href="http://careers.stackoverflow.com/marcodinacci" title="My CV/Resume">careers.stackoverflow.com</a>.
+    I'm not actively looking for a job but I'm always interested to know about new opportunities.</p>
+
 
 </div>
