--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ title: Marco Dinacci
     <p>&rarr; <a href="/blog.html">Browse all {{ site.posts | size }} posts</a></p>
         <!--
     <h2>Recent Photos</h2>
-    <div class="photos">
+    <section class="photos">
         {% include photos.html %}
-    </div>
+    </section>
     -->
     <br>
     <h2>Projects</h2>
-    <div class="projects">
+    <section class="projects">
         {% include projects.html %}
-    </div>
+    </section>
 </div>
