added lab folder with mdpopup and a quick change to copyright page

--- a/copyright.html
+++ b/copyright.html
@@ -3,7 +3,7 @@ layout: default
 title: Copyright
 ---
 <p>
-<img class="align-right" alt="Creative Commons License" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a>With the exceptions noted below, all content on this site (posts, images, source code) is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
+<img class="align-right" alt="Creative Commons License" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a>With the exceptions noted below, all content on this site (posts, images etc...) is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
 
 <h4>Exceptions</h4>
 <ul>
